[gd_scene load_steps=4 format=3 uid="uid://dwcubi36vd1t2"]

[ext_resource type="Texture2D" uid="uid://bv5anckcdn3ho" path="res://Assets/sprites-Sheet.png" id="1_4vug3"]
[ext_resource type="Script" uid="uid://wb74ts1gnrma" path="res://Scripts/missle.gd" id="1_bq2cw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bq2cw"]
size = Vector2(4, 4)

[node name="Area2D" type="Area2D"]
collision_layer = 4
collision_mask = 26
script = ExtResource("1_bq2cw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_4vug3")
region_enabled = true
region_rect = Rect2(69, 0, 4, 4)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bq2cw")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4.76837e-07, 0)
scale = Vector2(0.2, 0.2)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
